backend.log

=== Launch 2025-09-15 09:06:21 PORT=3000 ===
D:\v2 youtube app\py_apps\aurachat-site\backend\server.js:142
const path = require('path');
      ^

SyntaxError: Identifier 'path' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.19.0

=== Launch 2025-09-15 09:11:48 PORT=3000 ===
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module 'helmet'
Require stack:
- D:\v2 youtube app\py_apps\aurachat-site\backend\server.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (D:\v2 youtube app\py_apps\aurachat-site\backend\server.js:15:16)
    at Module._compile (node:internal/modules/cjs/loader:1706:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ 'D:\\v2 youtube app\\py_apps\\aurachat-site\\backend\\server.js' ]
}

Node.js v22.19.0

=== Launch 2025-09-15 09:17:20 PORT=3000 ===
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module 'helmet'
Require stack:
- D:\v2 youtube app\py_apps\aurachat-site\backend\server.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (D:\v2 youtube app\py_apps\aurachat-site\backend\server.js:15:16)
    at Module._compile (node:internal/modules/cjs/loader:1706:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ 'D:\\v2 youtube app\\py_apps\\aurachat-site\\backend\\server.js' ]
}

Node.js v22.19.0

=== Launch 2025-09-15 09:22:27 PORT=3000 ===
node:internal/modules/cjs/loader:1386
  throw err;
  ^

Error: Cannot find module 'helmet'
Require stack:
- D:\v2 youtube app\py_apps\aurachat-site\backend\server.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1383:15)
    at defaultResolveImpl (node:internal/modules/cjs/loader:1025:19)
    at resolveForCJSWithHooks (node:internal/modules/cjs/loader:1030:22)
    at Function._load (node:internal/modules/cjs/loader:1192:37)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (D:\v2 youtube app\py_apps\aurachat-site\backend\server.js:15:16)
    at Module._compile (node:internal/modules/cjs/loader:1706:14) {
  code: 'MODULE_NOT_FOUND',
  requireStack: [ 'D:\\v2 youtube app\\py_apps\\aurachat-site\\backend\\server.js' ]
}

Node.js v22.19.0
